# easyframes

./: .gitignore  CMakeLists.txt  COPYING  LICENSE  README  README.md
.github/workflows/: ci.yml
cmake/modules/: version.cpp.in
fuzz/: ef.dict  fuzz-argc-frame.c  fuzz-parse-bytes.c  fuzz-roundtrip.c
fuzz/corpus-argc-frame/: data_ascii  data_hex  data_pattern_cnt  double_vlan  eth_arp  eth_basic  eth_coap  eth_hsr  eth_ign_all  eth_ign_fields  eth_ign_ipv6  eth_ipv4  eth_ipv4_icmp  eth_ipv4_icmp_fields  eth_ipv4_igmp  eth_ipv4_prp  eth_ipv4_tcp  eth_ipv4_udp  eth_ipv6_mld  eth_ipv6_udp  eth_mrp_lnk  eth_mrp_prop_nack  eth_mrp_topo  eth_mrp_tst  eth_oam_ccm  eth_oam_laps  eth_oam_lb  eth_oam_lt  eth_oam_raps  eth_opcua  eth_profinet_rtc  eth_ptp_announce  eth_ptp_follow_up  eth_ptp_peer_request  eth_ptp_peer_resp_fu  eth_ptp_peer_response  eth_ptp_request  eth_ptp_response  eth_ptp_sync  eth_rtag_ipv4  (+3 more)
fuzz/corpus-parse-bytes/: bin_byte  bin_prefix  ethertype_oam  ethertype_ptp  ipv6_linklocal  ipv6_multicast  mac_oam  octal
src/: CMakeLists.txt  ef-args.c  ef-arp.c  ef-buf.c  ef-capture.c  ef-coap.c  ef-dns.c  ef-eth.c  ef-ethernet.c  ef-exec.c  ef-fileio.c  ef-functions.c  ef-icmp.c  ef-ifh.c  ef-igmp.c  ef-ip.c  ef-ipv4.c  ef-ipv6.c  ef-mld.c  ef-mrp.c  ef-oam.c  ef-opcua.c  ef-padding.c  ef-parse-bytes.c  ef-payload.c  ef-printout.c  ef-profinet.c  ef-ptp.c  ef-raw.c  ef-rip.c  ef-sv.c  ef-tcp.c  ef-ts.c  ef-udp.c  ef-vlan.c  ef.c  ef.h  er.c  getopt.c  main.c  (+18 more)
test/: catch_single_include.hxx  ef-test.cxx  ef-test.h  ef-tests.cxx  ifh-ignore.cxx  parser-tests.rb  test-ef-parse-bytes.cxx  test-padding.cxx
